Opened 10 years ago

Closed 10 years ago

#11820 closed bug (fixed)

[Shortcuts] crashes in BStringField::String

Reported by: diver Owned by: waddlesplash
Priority: normal Milestone: R1
Component: Preferences/Shortcuts Version: R1/Development
Keywords: Cc: atalax
Blocked By: Blocking:
Platform: All

Description

This is hrev48760.

Double clicking shortcuts can crash Shortcuts.

To reproduce:

  • copy attached shortcuts_settings to ~/config/settings
  • double click the first empty shortcut

Attachments (2)

Shortcuts-1679-debug-02-02-2015-19-47-51.report (9.6 KB ) - added by diver 10 years ago.
shortcuts_settings (1.6 KB ) - added by diver 10 years ago.

Download all attachments as: .zip

Change History (5)

by diver, 10 years ago

Attachment: shortcuts_settings added

comment:1 by diver, 10 years ago

Cc: atalax added

comment:2 by waddlesplash, 10 years ago

Owner: changed from nobody to waddlesplash
Status: newassigned

comment:3 by waddlesplash, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev48796.

Note: See TracTickets for help on using tickets.