Shortcuts: don't store the contents of the columns in the settings file.

Fixes #11820 and #11849.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>